--- a/index.html
+++ b/index.html
@@ -1,107 +1,128 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Site vitrine optimisé_Kenza</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <script src="js/script.js"></script>
-  </head>
-  <body>
-    <div class="topbar">
-      <div class="container nav">
-        <div class="logo">Slow<span>Site</span></div>
-        <div class="menu">
-          <a href="#galerie">Galerie</a>
-          <a href="#defis">Défis</a>
-          <a href="#apropos">À propos</a>
-        </div>
-      </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Site vitrine pour expérimenter et optimiser la performance web. Testez, mesurez et proposez des améliorations.">
+  <meta name="keywords" content="performance web, optimisation, web vitals, BUT MMI Béziers">
+  <title>Optimisation Site Kenza</title>
+  
+  <!-- Préchargement des ressources critiques -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" href="css/styles.css" as="style">
+  
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="js/script.js" defer></script>
+</head>
+<body>
+  <header class="topbar">
+    <div class="container nav">
+      <div class="logo">Slow<span>Site</span></div>
+      <nav class="menu">
+        <a href="#galerie">Galerie</a>
+        <a href="#defis">Défis</a>
+        <a href="#apropos">À propos</a>
+      </nav>
     </div>
+  </header>
 
-    <div class="hero">
-      <div class="container hero-inner">
-        <div class="hero-text">
-          <h1>Un site pour expérimenter la performance</h1>
-          <p>Testez, mesurez et proposez des améliorations.</p>
-          <a class="cta" href="#defis">Voir les défis</a>
-        </div>
+  <section class="hero">
+    <div class="container hero-inner">
+      <div class="hero-text">
+        <h1>Un site pour expérimenter la performance</h1>
+        <p>Testez, mesurez et proposez des améliorations.</p>
+        <a class="cta" href="#defis">Voir les défis</a>
       </div>
     </div>
+  </section>
 
-    <div id="galerie" class="section gallery">
-      <div class="container">
-        <h2>Galerie</h2>
-        <div class="grid">
-          <div class="card">
-            <a href="img1.html"><img src="img/img1.jpg" alt="Image 1" /></a>
-          </div>
-          <div class="card">
-            <a href="img2.html"><img src="img/img2.jpg" alt="Image 2" /></a>
-          </div>
-          <div class="card">
-            <a href="img3.html"><img src="img/img3.jpg" alt="Image 3" /></a>
-          </div>
-          <div class="card">
-            <a href="img4.html"><img src="img/img4.jpg" alt="Image 4" /></a>
-          </div>
-          <div class="card">
-            <a href="img5.html"><img src="img/img5.jpg" alt="Image 5" /></a>
-          </div>
-          <div class="card">
-            <a href="img6.html"><img src="img/img6.jpg" alt="Image 6" /></a>
-          </div>
-        </div>
+  <section id="galerie" class="section gallery">
+    <div class="container">
+      <h2>Galerie</h2>
+      <div class="grid">
+        <article class="card">
+          <a href="img1.html" aria-label="Voir l'image 1">
+            <img src="img/img1.jpg" alt="Image 1" loading="lazy" width="400" height="300">
+          </a>
+        </article>
+        <article class="card">
+          <a href="img2.html" aria-label="Voir l'image 2">
+            <img src="img/img2.jpg" alt="Image 2" loading="lazy" width="400" height="300">
+          </a>
+        </article>
+        <article class="card">
+          <a href="img3.html" aria-label="Voir l'image 3">
+            <img src="img/img3.jpg" alt="Image 3" loading="lazy" width="400" height="300">
+          </a>
+        </article>
+        <article class="card">
+          <a href="img4.html" aria-label="Voir l'image 4">
+            <img src="img/img4.jpg" alt="Image 4" loading="lazy" width="400" height="300">
+          </a>
+        </article>
+        <article class="card">
+          <a href="img5.html" aria-label="Voir l'image 5">
+            <img src="img/img5.jpg" alt="Image 5" loading="lazy" width="400" height="300">
+          </a>
+        </article>
+        <article class="card">
+          <a href="img6.html" aria-label="Voir l'image 6">
+            <img src="img/img6.jpg" alt="Image 6" loading="lazy" width="400" height="300">
+          </a>
+        </article>
       </div>
     </div>
+  </section>
 
-    <div id="apropos" class="section features">
-      <div class="container">
-        <h2>Fonctionnalités</h2>
-        <div class="features-grid">
-          <div class="feature">
-            <div class="icon">⚡</div>
-            <h3>Design moderne</h3>
-            <p>Couleurs, ombres, grille responsive.</p>
-          </div>
-          <div class="feature">
-            <div class="icon">🧱</div>
-            <h3>Scripts</h3>
-            <p>Intégration de scripts pour effets visuels.</p>
-          </div>
-          <div class="feature">
-            <div class="icon">🖼️</div>
-            <h3>Images</h3>
-            <p>Galerie de visuels variés.</p>
-          </div>
-          <div class="feature">
-            <div class="icon">🔠</div>
-            <h3>Polices</h3>
-            <p>Typographie soignée.</p>
-          </div>
-        </div>
+  <section id="apropos" class="section features">
+    <div class="container">
+      <h2>Fonctionnalités</h2>
+      <div class="features-grid">
+        <article class="feature">
+          <div class="icon" aria-hidden="true">⚡</div>
+          <h3>Design moderne</h3>
+          <p>Couleurs, ombres, grille responsive.</p>
+        </article>
+        <article class="feature">
+          <div class="icon" aria-hidden="true">🧱</div>
+          <h3>Scripts</h3>
+          <p>Intégration de scripts pour effets visuels.</p>
+        </article>
+        <article class="feature">
+          <div class="icon" aria-hidden="true">🖼️</div>
+          <h3>Images</h3>
+          <p>Galerie de visuels variés.</p>
+        </article>
+        <article class="feature">
+          <div class="icon" aria-hidden="true">🔠</div>
+          <h3>Polices</h3>
+          <p>Typographie soignée.</p>
+        </article>
       </div>
     </div>
+  </section>
 
-    <div id="defis" class="section challenges">
-      <div class="container">
-        <h2>Défis</h2>
-        <ol>
-          <li>Analyser le comportement réseau et le rendu.</li>
-          <li>Identifier les ressources critiques.</li>
-          <li>Proposer des optimisations mesurables.</li>
-          <li>Comparer avant/après avec des outils de mesure.</li>
-          <li>Documenter la démarche.</li>
-        </ol>
-      </div>
+  <section id="defis" class="section challenges">
+    <div class="container">
+      <h2>Défis</h2>
+      <ol>
+        <li>Analyser le comportement réseau et le rendu.</li>
+        <li>Identifier les ressources critiques.</li>
+        <li>Proposer des optimisations mesurables.</li>
+        <li>Comparer avant/après avec des outils de mesure.</li>
+        <li>Documenter la démarche.</li>
+      </ol>
     </div>
+  </section>
 
-    <div class="footer">
-      <div class="container">
-        <p>TD Optimisation du temps de chargement d’un site web</p>
-        <p>© 2025 — BUT MMI Béziers - MAURIN N.</p>
-      </div>
+  <footer class="footer">
+    <div class="container">
+      <p>TD Optimisation du temps de chargement d'un site web</p>
+      <p>© 2025 – BUT MMI Béziers - MAURIN N.</p>
     </div>
-    <script src="js/metrics.js" defer></script>
-  </body>
+  </footer>
+  
+  <script src="js/metrics.js" defer></script>
+</body>
 </html>
